--- a/m3u1/SITIO_PRACTICA/css/transporte.css
+++ b/m3u1/SITIO_PRACTICA/css/transporte.css
@@ -181,3 +181,88 @@ h2 {
 .servicio:nth-child(even){
     flex-direction: row-reverse;
 }
+
+/*INICIO DE GALERIA*/
+
+.galeria {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.galeria img{
+    width: 18%;
+    border: 1px solid #ddd;
+    padding: 0.3em;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    margin-right: 2%;
+}
+
+/*Inicio de CONTACTO*/
+
+.contacto{
+    display: flex;
+    gap: 24px;
+}
+
+.datos p{
+    font-size: 14px;
+}
+
+.contacto div{
+    width: 100%;
+}
+
+.datos ul li{
+    font-size: 13px;
+}
+.formulario p{
+    display: flex;
+}
+
+.formulario p label{
+    min-width: 80px;
+    display: flex;
+    align-items: center;
+}
+
+.formulario p input,
+.formulario p textarea{
+    width: 100%;
+}
+
+.formulario p input,
+.formulario p textarea {
+    background: #ddd;
+    border-radius: 5px;
+    border: 1px solid #999;
+    font-size: 14px;
+    padding: 6px 10px;
+}
+
+.formulario textarea{
+    resize: none;
+    height: 150px;
+}
+
+.formulario p:nth-child(4) {
+    align-items: start;
+}
+
+.formulario input[type="submit"] {
+    background: #6da9ed;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    color: white;
+    font-size: 16px;
+    padding: 6px 20px;
+    width: auto;
+    position: relative;
+    left: 5rem;
+    cursor: pointer;
+}
+
+.formulario input[type="submit"]:hover {
+    background-color: #2e64a1;
+}
+
